# projetoPoo2

./: README.md  main.py  pyproject.toml  relatorio_projeto.md  teste_plataformas.py
aeroSim/: main.py
aeroSim/config/: physicsConfig.py  settings.py  simulationConfig.py
aeroSim/core/: engine.py
aeroSim/entities/: circle.py  moving_polygon.py  obstacle.py  particle.py  polygon.py  roof.py  simplePlatform.py  wedge.py
aeroSim/environment/: fluidGrid.py  obstacleManager.py  world.py
aeroSim/graphics/: batch_menu.py  menu.py  menu_old.py  renderer.py  results_screen.py
aeroSim/persistence/: models.py  repository.py
aeroSim/physics/: solver.py
aeroSim/physics/models/: baseModel.py  simpleModel.py
aeroSim/simulation/: batchRunner.py  simulation.py
data/: sim_data.db
projetopoo2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: test_particle_sequences.py
