[project]
name = "projetopoo2"
version = "0.1.0"
description = "Simulador de Fluidos"
authors = [
    {name = "Zuchi", email = "zuchii.victor@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
    "numpy>=2.4.3",
    "scipy>=1.17.1,<2.0.0",
    "pillow>=12.2.0,<13.0.0"
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["aeroSim*"]