[project]
name = "projetopoo2"
version = "0.1.0"
description = "Simulador de Fluidos"
authors = [
    {name = "Zuchi", email = "zuchii.victor@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
    "sqlalchemy>=2.0.49",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["aeroSim*"]
